- Added server port and NickServ identify to the IRC/SQL settings tab
- Moved Zombie Survival options into the "Games" tab
- Removed the duplicate "death count" option
- Made it so plugins are loaded last, this fixes a problem with accessing levels in plugins
- Added Plugin.Events.CancelEvent()
- Some events have been updated (Might break old plugins)

v5.1.0.3
- Fixed level saving!

v5.1.0.2
- Fixed the bug that pretty much broke physics
- Fixed a bug with grass growing on physics 0 and 5
- Fixed the error that happens when a new user joins the server

v5.1.0.1
- Hopefully fixed the error-when-a-new-person-joins bug...
- Fixed the check for updates option
- Fixed AFK kick!!
- Added load-on-/goto option for maps, defaults to on and requires the "Load on /goto" server option enabled to work. Disabling the option on a map will prevent it from being loaded with /goto
- Added Zombie Survival mode! :D Use /zombiegame to start it, there are several other commands as well

v5.1.0.0
- Fixed a bug that caused the console to crash, when clicking on a player
- Fixed a bug where the server would crash, when generating economy.properties
- /draw can now be undone with /undo
- /rankmsg has been successfully added to command list (left out from last release)
- Added spam control (Mutes players after [X] amount of messages and for [Y] minutes
- Fixed delay on server start
- Fixed the updater
- Added: /perbuildmax [Level] [Rank] - Sets the max rank to build on a map, doesn't exlude player's with access to the command
- Added: /pervisitmax [Level] [Rank] - Sets the max rank to visit a map, doesn't exclude player's with access to the command
- Added: /patrol - Teleports you to a random guest.
- Options for /allowguns now save over server restarts
- New /whois stat(Cuboided blocks) - Shows how many blocks a player has cuboided.
- Added: /quick [Function] [Block] [Type] - Instantly complete a cuboid.
	- Functions include: cuboid, pyramid, replace, replaceall, replacenot and spheroid.